--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = homomorph
 version = attr: homomorph.__version__
 author = Marc Singleton
 author_email = marcsingleton@berkeley.edu
-description = A numerically-stable implementation of essential HMM algorithms with tutorials on training methods
+description = A numerically stable implementation of essential HMM algorithms with tutorials on training methods
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/marcsingleton/homomorph
